--- a/views/partials/order.ejs
+++ b/views/partials/order.ejs
@@ -6,13 +6,18 @@
                 <p class="col-6" style="text-align: right;">status: cooking</p>
             </div>
             <div class="row col-md-10 col-xs-12 justify-content-center">
+
                 <img src="IMG_1893.jpg" class="col-3 pic">
-                <div class="col-9">
+                <div class="col-8">
                     <!-- order list -->
                     <p class="menuName">yummmmmmmm</p>
                     <p>nnainimin</p>
                     <p>ddddddddń</p>
                 </div>
+                <div class="col-1">
+                    <p>xN</p>
+                </div>
+
             </div>
         </div>
     </div>
