--- a/views/kitchen.ejs
+++ b/views/kitchen.ejs
@@ -10,8 +10,9 @@
 
 <% if(sort){ %>
     <!-- sort by status -->
-    <% var unavailable = true %> <!-- tracker -->
 
+        <!-- tracker -->
+    <% var unavailable = true %> 
     <div class="container-md">
         <h1>Cooking</h1>
     </div>
