--- a/views/partials/cHeader.ejs
+++ b/views/partials/cHeader.ejs
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="/css/style.css" rel="stylesheet">
-        <title>Kitchen UI</title>
-
+        <title>Customer UI</title>
     </head>
     <body>
         <nav class="navbar fixed-top navbar-default">
             <div class="container justify-content-center" >
                 <div class="navbar-brand"><h1 id="restaurantName">B&J kitchen</h1></div>
             </div>
+            
         </nav>
         <div class="container-md"></div>
