--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,10 +12,10 @@
         <nav class="navbar fixed-top navbar-default">
             <div class="container" >
                 <a href="#">
-                    <h1 id="restaurantName">B&J kitchen</h1>
+                    <h1 id="restaurantName">B&J restaurant</h1>
                 </a>
                 <!-- navigation bar toggle btn -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" id="toggleBtn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
                         <i class="bi bi-list-ul icon"></i>
                     </span>
@@ -24,13 +24,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="container">                      
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">gshdkhhfoiniei</a>
-                            </li>
-                            <hr>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">gshdkhhfoiniei</a>
-                            </li>
+                            <div class="container navContent">category</div>
+                            <% var first = true %>
+                            <% category.forEach(function(category){ %>
+                                <% if(!first){ %>
+                                    <hr>
+                                <% }else{ first = false }%>
+                                <li class="nav-item active"><!-- %20 = space -->
+                                    <a class="nav-link" href="/<%= category.category %>"><%= category.category %></a>
+                                </li>
+                            <% }); %>
                         </ul>
                     </div>
                 </div>
