--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,5 +1,5 @@
 <div class="col-md-6 col-lg-4">
-    <a href="#" class="menuName">
+    <a href="/<%= category %>/<%= menu.menuName %>" class="menuName">
         <div class="menuItem rounded">
             <img class="menuImg rounded-top" src="<%= menu.imgSource %>">
             <div class="container row">
