--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
         <title>Customer UI</title>
     </head>
     <body>
+        <div class="container">
         <nav class="navbar fixed-top navbar-default">
             <div class="container" >
                 <a href="#">
@@ -22,6 +23,14 @@
                 </button>
                 <!-- navigation bar content -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <form class="form-inline row">
+                        <div class="container col-10">
+                            <input class="form-control mr-sm-2 searchBox" type="search" placeholder="Search" aria-label="Search">
+                        </div>
+                        <div class="container col-2 justify-content-center">
+                            <button class="btn searchBtn" type="submit">Search</button>
+                        </div>
+                    </form>
                     <div class="container">                      
                         <ul class="navbar-nav">
                             <div class="container navContent">category</div>
@@ -38,10 +47,5 @@
                     </div>
                 </div>
             </div>
-
-
-
         </nav>
-
-
-        <div class="container-md"></div>
+        </div>
