--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -2,7 +2,7 @@
     <a href="/<%= category %>/<%= menu.menuName %>" class="menuName">
         <div class="menuItem rounded">
             <img class="menuImg rounded-top" src="<%= menu.imgSource %>">
-            <div class="container row">
+            <div class="container row far">
                 <p class="col-9"><%- menu.menuName %></p>
                 <p class="price col-3"><%= menu.price %></p>
             </div>
