--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,9 +2,10 @@
     body{
         background-color: lightgray;
         padding: 4.5rem 0 4.5rem;
+        max-height: 100%;
     }
     html{
-        background-color: lightgray;
+        background-color: darkolivegreen;
     }
     a{
         text-decoration: none;
@@ -19,6 +20,7 @@
         border-radius: 5px;
         padding-top: 25px;
         padding-bottom: 25px;
+        box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
     }
     .pic{
         width: 25%;
@@ -66,6 +68,9 @@
         color: green;
         text-decoration: underline;
     }
+    ul{
+        list-style-type: none;
+    }
 
 /* Customer navbar */
     .navbar{
@@ -105,21 +110,27 @@
     .searchBtn{
         background-color: chocolate;
         color: white;
+        overflow: hidden;
     }
 
 /* Customer UI */
     .menuImg{
         width: 100%;
-        height: 300px;
+        height: 20rem;
         object-fit: cover;
     }
     .menuItem{
         background-color: white;
         margin-bottom: 24px;
+        box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+        height: 95%;
     }
     .price{
         color: darkgray;
         text-align: right;
+    }
+    .far{
+        padding: 15px;
     }
 
 /* menu info */
@@ -129,12 +140,148 @@
     .infoPrice{
         text-align: right;
     }
+    .addRemark{
+        color: #fff;
+        font-size: 30px;
+    }
+    .confirmBtn{
+        margin-top: 30px;
+        border-radius: 10px;
+    }
+    .confirm{
+        background-color: goldenrod;
+        color: #fff;
+    }
 
 /* UI */
     .menuName{
+        margin-top: 25px;
         font-size: xx-large;
         color: #000;
     }
     .nav-link:hover{
         color: white;
+    }
+
+/* to do list */
+    .box {
+        max-width: 400px;
+        margin: 0 auto 50px;
+        background: white;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+    }
+    .item {
+        min-height: 70px;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #F1F1F1;
+    } 
+    .item:last-child {
+        border-bottom: 0;
+    }
+    input:checked+p {
+        text-decoration: line-through;
+        text-decoration-color: red;
+    } 
+    input[type="checkbox"] {
+        margin: 20px;
+    }
+    .remark {
+        margin: 0;
+        padding: 20px;
+        font-size: 20px;
+        font-weight: 200;
+        color: #000;
+    }
+    form.item {
+        text-align: center;
+        margin-left: 20px;
+    } 
+    .plusBtn {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+        border-color: transparent;
+        background-color: darkolivegreen;
+        color: #fff;
+        font-size: 30px;
+        padding-bottom: 6px;
+        border-width: 0;
+    }   
+    input[type="text"] {
+        text-align: center;
+        height: 60px;
+        top: 10px;
+        border: none;
+        background: transparent;
+        font-size: 20px;
+        font-weight: 200;
+        width: 313px;
+    }
+    input[type="text"]:focus {
+        outline: none;
+        box-shadow: inset 0 -3px 0 0 darkolivegreen;; /* New item input underline color */
+    }
+    ::placeholder {
+        color: grey;
+        opacity: 1;
+    }
+    .remarkBox{
+        background-color: darkseagreen;
+        padding: 25px 0 0;
+        border-radius: 5px;
+        box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+    }
+/* status */
+    .order{
+        position: relative;
+    }
+    .orderN{
+        background-color: darkgreen;
+        width: fit-content;
+        color: #fff;
+        font-size: 20px;
+        padding: 0 20px;
+        border-radius: 50px;
+    }
+    .statusImg{
+        width: 100%;
+        height: 15rem;
+        object-fit: cover;
+    }
+    .status{
+        text-align: right;
+    }
+    .statusText{
+        font-size: 20px;
+        margin-bottom: 0;
+        padding-top: 12px;
+    }
+    .imgText{
+        position: absolute;
+        bottom: 55px;
+        right: 40px;
+        color: darkgreen;
+    }
+    .sepp{
+        color: darkgreen;
+        padding: 1px;
+        opacity: 1;
+        margin-bottom: 25px;
+    }
+    .menuStat{
+        padding: 0;
+    }
+    .cookingText{
+        color: coral;
+    }
+    .queueText{
+        color: aqua;
+    }
+    .canceledText{
+        color: gray;
+    }
+    .servedText{
+        color: cornflowerblue;
     }
