--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,9 @@
 <%- include("partials/header",{category: menu}); %>
 <div class="container">
-
     <div class="container"><a>path</a></div>
     <div class="row" >
         <% menu.forEach(function(category){ %>
-            <h1><%= category.category %></h1>
+            <h1 class="far"><%= category.category %></h1>
             <% category.menuList.forEach(function(menuList){ %>
                 <%- include("partials/menu",{ menu: menuList, category: category.category}) %>
             <% }); %>
