--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,23 +23,26 @@
                 </button>
                 <!-- navigation bar content -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <form class="form-inline row">
-                        <div class="container col-10">
-                            <input class="form-control mr-sm-2 searchBox" type="search" placeholder="Search" aria-label="Search">
-                        </div>
-                        <div class="container col-2 justify-content-center">
-                            <button class="btn searchBtn" type="submit">Search</button>
-                        </div>
-                    </form>
-                    <div class="container">                      
+                    
+                    <div class="container far">                      
                         <ul class="navbar-nav">
+                            <div class="container">
+                                <!-- search box is HERE! -->
+                            <form class="form-inline row"> 
+                                <div class="container col-md-11 col-10">
+                                    <input class="form-control mr-sm-2 searchBox" type="search" placeholder="Search" aria-label="Search">
+                                </div>
+                                <button class="btn searchBtn col-md-1 col-2" type="submit"><i class="bi bi-search"></i></button>
+                            </form>
+
+                            </div>
                             <div class="container navContent">category</div>
                             <% var first = true %>
                             <% category.forEach(function(category){ %>
                                 <% if(!first){ %>
                                     <hr>
                                 <% }else{ first = false }%>
-                                <li class="nav-item active"><!-- %20 = space -->
+                                <li class="nav-item active">
                                     <a class="nav-link" href="/<%= category.category %>"><%= category.category %></a>
                                 </li>
                             <% }); %>
