--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,4 +1,4 @@
 <!-- only category -->
-<%- include("partials/header",{category: menu}); %>
+<%- include("partials/header",{title: "", category: menu}); %>
 
-<%- include("partials/footer"); %>
+<%- include("partials/footer", {active: "home"}); %>
