--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header",{category: menu}); %>
+<%- include("partials/header",{title: "menu", category: menu}); %>
 <div class="container">
     <div class="container"><a>path</a></div>
     <div class="row" >
@@ -10,4 +10,4 @@
         <% }); %>
     </div>
 </div>
-<%- include("partials/footer"); %>
+<%- include("partials/footer", {active: "home"}); %>
