--- a/views/kitchenLogIn.html
+++ b/views/kitchenLogIn.html
@@ -6,7 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <title>kitchen logIn</title>
     </head>
-    <body style="padding-top: 100px;">
+    <body style="padding-top: 100px; background-color: whitesmoke;">
         <div class="container">
             <form>
                 <h1 style="text-align: center;">B&J kitchen</h1>
@@ -22,7 +22,7 @@
                 </div><br>
                 <div class="row justify-content-center">
                     <div class="text-center">
-                        <button class="btn" type="submit" style="background-color: darkolivegreen; color: white;">LOGIN</button>
+                        <button class="btn" type="submit" style="background-color: #438F68; color: white;">LOGIN</button>
                     </div>
                 </div>
             </form>
