--- a/views/menuInfo.ejs
+++ b/views/menuInfo.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header",{category: menu}); %>
+<%- include("partials/header",{title: menuName, category: menu}); %>
 <div class="container">
     <div class="row justify-content-center">
         <img class="menuInfoImg col-12 col-md-9" src="../<%= imgSource %>" alt="<% menuName %>">
@@ -42,4 +42,4 @@
 
 </div>
 
-<%- include("partials/footer"); %>
+<%- include("partials/footer", {active: "home"}); %>
