--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link href="/css/style.css" rel="stylesheet">
-        <title>Customer UI</title>
+        <title><%= title %></title>
     </head>
     <body>
         <div class="container">
@@ -36,7 +36,7 @@
                             </form>
 
                             </div>
-                            <div class="container navContent">category</div>
+                            <div class="container navContent">By category:</div>
                             <% var first = true %>
                             <% category.forEach(function(category){ %>
                                 <% if(!first){ %>
