--- a/views/partials/status.ejs
+++ b/views/partials/status.ejs
@@ -4,15 +4,20 @@
     <p>Order <%= n %></p>
 </div>
 <img class="statusImg" src="../IMG_1893.jpg"/>
-<div class="imgText"><%= order.price %></div>
+<div class="imgText"><%= orderList.price %></div>
 <div class="container-md menuStat row">
-    <div class="col-6 statusText">
-        <p><%= order.menuName %></p> 
+    <div class="col-6">
+        <p class="statusText"><%= orderList.menuName %></p> 
     </div>
-    <div class="col-6 statusText status <%= order.status + 'Text' %>">
-        <p><%= order.status %></p> 
+    <div class="col-6 status <%= orderList.status + 'Text' %>">
+        <p class="statusText"><%= orderList.status %></p> 
     </div>
 </div>
+<% if(orderList.status != "canceled"){ %>
+    <div class="row justify-content-center">
+        <button class="btn canceledBtn col-10">Canceled</button>
+    </div>
+<% } %>
 <hr class="sepp">
 
 </div>
