--- a/views/status.ejs
+++ b/views/status.ejs
@@ -1,9 +1,9 @@
-<%- include("partials/header",{category: menu}); %>
+<%- include("partials/header",{title: "Order status", category: menu}); %>
  <div class="container">
     <h1>Status order</h1>
 </div>
-    <% for(i = 0; i < order.length; i++){ %>
-            <%- include("partials/status", {order: order[i], n: i + 1}); %>
+    <% for(i = 0; i < orderList.length; i++){ %>
+            <%- include("partials/status", {orderList: orderList[i], n: i + 1}); %>
     <% } %>
 
-<%- include("partials/footer"); %>
+<%- include("partials/footer", {active: "orderStatus"}); %>
