--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,4 +1,17 @@
 <!-- only category -->
-<%- include("partials/header",{title: "", category: menu}); %>
+<%- include("partials/header",{title: category, category: menu}); %>
+<div class="container">
+    <div class="container"><a>path</a></div>
+    <div class="row" >
+        <% menu.forEach(function(menu){ %>
+            <% if(menu.category == category){ %>
+                <h1 class="far"><%= category %></h1>
+                <% menu.menuList.forEach(function(menuList){ %>
+                    <%- include("partials/menu",{ menu: menuList, category: category.category}) %>
+                <% }); %>
+            <% } %>
 
+        <% }); %>
+    </div>
+</div>
 <%- include("partials/footer", {active: "home"}); %>
