--- a/views/menuInfo.ejs
+++ b/views/menuInfo.ejs
@@ -5,7 +5,7 @@
     </div>
     <div class="menuName row justify-content-center">
         <p class="col-8 col-md-6 "><%= menuName %></p>
-        <p class="infoPrice col-4 col-md-3"><%= price %></p>
+        <p class="price col-4 col-md-3"><%= price %></p>
     </div>
     <div class="container">
         <div class="row justify-content-center">
