--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,10 +2,11 @@
     body{
         background-color: whitesmoke;
         padding: 4.5rem 0 4.5rem;
-        max-height: 100%;
+        min-height: 100%;
     }
     html{
         background-color: #438F68;
+        height: 100%;
     }
     a{
         text-decoration: none;
@@ -130,6 +131,9 @@
     .active:hover{
         color: whitesmoke;
     }
+    .links{
+        padding-top: 15px;
+    }
 
 /* Customer UI */
     .menuImg{
@@ -153,9 +157,6 @@
 /* menu info */
     .menuInfoImg{
         height: auto;
-    }
-    .infoPrice{
-        text-align: right;
     }
     .addRemark{
         color: #fff;
@@ -245,8 +246,8 @@
         opacity: 1;
     }
     .remarkBox{
-        background-color: #8AA6A3;
-        padding: 25px 0 0;
+        background-color: #b8a57d;
+        padding: 25px 0;
         border-radius: 5px;
         box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
     }
