--- a/views/checkOut.ejs
+++ b/views/checkOut.ejs
@@ -1,11 +1,12 @@
 <%- include("partials/header",{title: "check out", category: menu}); %>
 <div class="container">
     <h1>Check out</h1>
-    <div class="remarkBox">
+    <div class="checkOutOrder">
         <% orderList.forEach(function(order){ %>
             <div class="row">
                 <p class="col-10"><%= order.menuName %></p>
                 <p class="col-2 price"><%= order.price %></p>
+                <%  console.log(order)%>
             </div>
             <ul>
                 <% order.remark.forEach(function(remark){ %>
@@ -13,6 +14,9 @@
                 <% }); %>
             </ul>
         <% }); %>
+    </div>
+    <div class="row justify-content-center">
+        <button class="btn col-md-9 col-12 confirmBtn checkOutBtn">check out</button>
     </div>
 </div>
 <%- include("partials/footer", {active: "checkOut"}); %>
