--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,13 @@
 <%- include("partials/header",{title: "menu", category: menu}); %>
 <div class="container">
-    <div class="container"><a>path</a></div>
+    <div class="container">
+        <a class="table" href="#">Table 8</a>
+        <span class="table"> | </span>
+        <a class="path" href="/">Menu</a> 
+    </div>
     <div class="row" >
         <% menu.forEach(function(category){ %>
-            <h1 class="far"><%= category.category %></h1>
+            <h1 class="farBottom"><%= category.category %></h1>
             <% category.menuList.forEach(function(menuList){ %>
                 <%- include("partials/menu",{ menu: menuList, category: category.category}) %>
             <% }); %>
