--- a/views/menuInfo.ejs
+++ b/views/menuInfo.ejs
@@ -1,5 +1,14 @@
 <%- include("partials/header",{title: menuName, category: menu}); %>
 <div class="container">
+    <div class="container">
+        <a class="table" href="#">Table 8</a>
+        <span class="table"> | </span>
+        <a class="path" href="/">Menu</a> 
+        <span class="path"> > </span>
+        <a class="path" href="/<%= category %>"><%= category %></a>
+        <span class="path"> > </span>
+        <a class="path" href="/<%= menuName %>"><%= menuName %></a>
+    </div>
     <div class="row justify-content-center">
         <img class="menuInfoImg col-12 col-md-9" src="../<%= imgSource %>" alt="<% menuName %>">
     </div>
