--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,7 +1,9 @@
 <!-- only category -->
 <%- include("partials/header",{title: category, category: menu}); %>
 <div class="container">
+
     <div class="container">
+        <!-- path -->
         <a class="table" href="#">Table 8</a>
         <span class="table"> | </span>
         <a class="path" href="/">Menu</a> 
