--- a/views/menuInfo.ejs
+++ b/views/menuInfo.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header",{title: menuName, category: menu}); %>
 <div class="container">
     <div class="container">
+        <!-- path -->
         <a class="table" href="#">Table 8</a>
         <span class="table"> | </span>
         <a class="path" href="/">Menu</a> 
