--- a/views/partials/order.ejs
+++ b/views/partials/order.ejs
@@ -7,7 +7,7 @@
             </div>
             <div class="row col-md-10 col-xs-12 justify-content-center">
 
-                <img src="IMG_1893.jpg" class="col-3 pic">
+                <img src="<%= orderInfo.imgSource %>" class="col-3 pic">
                 <div class="col-9">
                     <!-- order list -->
                     <p class="menuName"><%= orderInfo.menuName %></p>
