--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header",{title: "menu", category: menu}); %>
 <div class="container">
     <div class="container">
+            <!-- path -->
         <a class="table" href="#">Table 8</a>
         <span class="table"> | </span>
         <a class="path" href="/">Menu</a> 
